--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
          condition: service_healthy
 
   frontend:
-    build: ./todo-frontend
+    build: ./coveragex-todo-frontend
     container_name: coveragex-frontend
     restart: always
     ports:
